# solidityguard-env

./: Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
env/: contracts.py  environment.py  grader.py  models.py
server/: app.py
