[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "solidityguard-env"
version = "1.0.0"
description = "Smart contract security auditing environment for AI agents"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn==0.30.1",
    "pydantic==2.7.1",
    "openai==1.35.7",
    "requests==2.32.3",
    "python-multipart==0.0.9",
    "openenv>=0.1.0",
]

[project.scripts]
serve = "server.app:app"